25-01-2017 Juan Carlos Cruz
- Cambios en diferentes controladores para agregar funciones de navegacion
(con ERRORES para corregir rapido)